Fixed a few links

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="container header-content">
 
             <!-- Logo container -->
-            <a class="logo-link" href="../index.html">
+            <a class="logo-link" href="index.html">
                 <div class="logo-container">
                     <h2>BA</h2>
-                    <img src="../images/logo.svg" alt="Logo of the CCBA">
+                    <img src="images/logo.svg" alt="Logo of the CCBA">
                 </div>
             </a>
             <nav class="navigation">
