--- a/pages/join.html
+++ b/pages/join.html
@@ -71,7 +71,7 @@
         <section class="container-large normal-section">
             <h2>Complete the following information to request the association.</h2>
             <div class="form-container">
-                <form class="form" id="joinForm">
+                <form class="form" id="contactForm">
                     <fieldset>
                         <legend>Personal information</legend>
                         <!-- First Name -->
@@ -257,6 +257,6 @@
     <!-- Main scripts -->
     <script src="../js/scripts.js"></script>
     <!-- Page scripts -->
-    <script src="../js/joinScripts.js"></script>
+    <script src="../js/formScripts.js"></script>
 </body>
 </html>
