--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -58,11 +58,15 @@
 
     <!-- Main content starts -->
     <main class="container">
-        <h1>Thank you for contacting us!</h1>
+        <section class="normal-section">
 
-        <p class="text-center">We'll be reaching you out soon!</p>
+            <h1>Thank you for contacting us!</h1>
+            
+            <p class="text-center">We'll be reaching you out soon!</p>
+            
+            <a href="../index.html" class="btn btn-primary centered-btn">Go to home page</a>
 
-        <button class="btn btn-primary centered-btn">Go to home page</button>
+        </section>
     </main>
 
     <footer class="primary-background">
