Html of Current weather fixed

--- a/index.html
+++ b/index.html
@@ -146,11 +146,8 @@
     <section class="container">
         <h2>Weather Information</h2>
         <!-- Today's weather -->
-        <div class="today-weather">
-            <h3 id="todayTemp"></h3>
-            <img id="todayIcon">
-            <p id="todayDescription"></p>
-            <p id="todayHumidity"></p>
+        <div class="today-weather" id="todayContainer">
+            <!-- Injected using JS -->
         </div>
 
         <!-- 3 day forecast -->
