Fixed some html issues

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,9 +88,10 @@
 
         <!-- Contact Form -->
         <section class="container">
+            <h2>Send us a message</h2>
             <form class="form contact-form" id="contactForm">
                 <fieldset>
-                    <legend>Send us a message</legend>
+                    <legend>Personal information</legend>
 
                     <!-- Name input -->
                     <label for="name">Name<span class="label-required">*</span></label>
@@ -128,12 +129,13 @@
                     <p>Ronaldo F. Ricagno</p>
                     <span>- Secretary</span>
                 </div>
+            </div>
         </section>
 
         <!-- Map -->
         <section class="container contact-map-container">
             <h3>Here's a map of our city</h3>
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210147.39707532423!2d-58.57338494756603!3d-34.615461116377574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1639405577771!5m2!1ses-419!2sar"style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210147.39707532423!2d-58.57338494756603!3d-34.615461116377574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1639405577771!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
     </main>
 
