--- a/pages/directory.html
+++ b/pages/directory.html
@@ -61,7 +61,7 @@
 
     <!-- Main content starts -->
     <main class="container">
-        <h1>Directory of succesful businesses</h1>
+        <h2>Directory of succesful businesses</h2>
 
         <div class="view-icons-container">
             <p>View:</p>
@@ -71,9 +71,9 @@
             </div>
         </div>
 
-        <section class="container" id="directoryContainer">
+        <div class="container" id="directoryContainer">
             <!-- Data from JSON file here -->
-        </section>
+        </div>
     </main>
 
     <footer class="primary-background">
